linux-image (linux-3.2.66-mempo-0.2.103) UNRELEASED; urgency=medium
  * grsec: ping, net:sctp, kvm x86, x86 tls and ldt fixes
  * v0.2-103-rc
  * changed back to 3 number x.y.z mempo/kernel version number. Leaving revision at 3 digits.
  * updated seed again
  * v0.2.103-200-rc

 -- mempo <mempo@mempo.org>  Wed, 28 Jan 2015 09:33:00 +0200

linux-image (linux-3.2.66-mempo-0.2_102) UNRELEASED; urgency=medium
  * grsec: s2io snprintf; ip:memleak,ipv6,MTU,atomic fragments
  * updated mempo maintainer scripts to increase revision
  * v0.2-102-rc

 -- mempo <mempo@mempo.org>  Thu, 22 Jan 2015 06:03:00 +0200

linux-image (linux-3.2.66-mempo-0.2) UNRELEASED; urgency=medium
  * grsec fix dma-on-stack; view /proc/pid/mem,fd,cmdline for d tasks
  * increased major version to 0.2
  * switching to increase only the release number, retaining same kernel version name 0.2
  * 3 digit revision number, starting at 101
  * v0.2-101-rc

 -- mempo <mempo@mempo.org>  Fri, 16 Jan 2015 04:10:00 +0200

linux-image (linux-3.2.66-mempo-0.1.100) UNRELEASED; urgency=medium
  * grsec fix dma-on-stack; view /proc/pid/mem,fd,cmdline for d tasks
  * v0.1.100-01-rc
	* not fully released (will be not uploaded to repo)

 -- mempo <mempo@mempo.org>  Fri, 16 Jan 2015 04:10:00 +0200

linux-image (linux-3.2.66-mempo-0.1.99) UNRELEASED; urgency=low
  * grsec tiny update (compiler warning) - nothing usable according to changelog
  * v0.1.99-01-rc

 -- mempo <mempo@mempo.org>  Tue, 11 Jan 2015 17:25:00 +0200

linux-image (linux-3.2.66-mempo-0.1.98) UNRELEASED; urgency=high
  * grsec and pax fixes
  * v0.1.98-01-rc

  * added cannary (in signed git tag)
  * v0.1.98-01-release-doc1 - this is just doc update, same .deb, same seed, revision

  * added check for $HOME symlink (see doc/build.txt) [home_readlink] 
  * the resulting .deb files should be identical to v0.1.98-01-rc if you manualy fixed this problems
  * v0.1.98-01-release-verify1 - NOT a separate release (same seed, revision, etc)
