@@ -1,5 +1,5 @@
 # place for STATIC settings for release. [autogenerated] 
 export kernel_general_version="3.2.66" # base version (should match the one is sourcecode.list)
-export KERNEL_DATE='2015-01-28 14:55:18' # UTC time of mempo version. This is > then max(kernel,grsec,patches) times
-export CURRENT_SEED='65f85aa27e27970c544b90db7fd12b1e423ba8c6903d7a04d8cb4f3f8267e812' # litecoin block 719450 (*)
-export DEBIAN_REVISION='200' # see README.md how to update it on git tag, on rc and final releases
+export KERNEL_DATE='2015-01-28 16:16:41' # UTC time of mempo version. This is > then max(kernel,grsec,patches) times
+export CURRENT_SEED='981ecc24a3c26f4122eb837d1cb9578bf8529f4fd8e2810fd340258235af7d98' # litecoin block 719482 (*)
+export DEBIAN_REVISION='201' # see README.md how to update it on git tag, on rc and final releases
