@@ -4,6 +4,7 @@ linux-image (linux-3.2.66-mempo-0.2.103) UNRELEASED; urgency=medium
   * changed back to 3 number x.y.z mempo/kernel version number. Leaving revision at 3 digits.
   * updated seed again
   * v0.2.103-200-rc
+  * require library 2.13-38+deb7u7 that Debian now has for CVE-2015-0235
 
  -- mempo <mempo@mempo.org>  Wed, 28 Jan 2015 09:33:00 +0200
 
